--- a/index.html
+++ b/index.html
@@ -136,6 +136,10 @@ python network_analyzer.py -o custom_capture.pcap</code></pre>
         </section>
     </main>
 
+    <footer class="footer">
+        <p>&copy; 2024 Bajinder Kumar. All rights reserved.</p>
+    </footer>
+
     <script src="script.js"></script>
 </body>
 </html>
